<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 [1076559197@qq.com | tchen0707@gmail.com]
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License”);
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/tudou_dialog_width"
    android:layout_height="@dimen/tudou_dialog_height"
    android:background="@drawable/bg_tudou_encrypt_dialog" >

    <TextView
        android:id="@+id/tudou_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/tudou_dialog_title"
        android:textColor="@color/tudou_dialog_title"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/tudou_dialog_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tudou_dialog_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:text="@string/tudou_dialog_sub_title"
        android:textColor="@color/tudou_dialog_sub_title"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/password_edit"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/tudou_dialog_sub_title"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="14dp"
        android:autoText="false"
        android:background="@drawable/yp_tudou_encrypt_input_box"
        android:capitalize="none"
        android:gravity="fill_vertical"
        android:password="true" />

    <View
        android:id="@+id/tudou_vertical_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/password_edit"
        android:layout_marginTop="10dp"
        android:background="@color/tudou_dialog_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tudou_vertical_line"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tudou_dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/alert_dialog_cancel"
            android:textColor="@color/tudou_dialog_button"
            android:textSize="16sp"/>

        <View
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@color/tudou_dialog_line" />

        <TextView
            android:id="@+id/tudou_dialog_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/alert_dialog_ok"
            android:textColor="@color/tudou_dialog_button"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>